Loader alignment fixed

--- a/src/app/shared/loader/loader.component.css
+++ b/src/app/shared/loader/loader.component.css
@@ -1,5 +1,5 @@
 .loaderHolder{
-    position: absolute;
+    position: fixed;
     top: 0;
     height: 100vh;
     width: 100vw;
@@ -12,12 +12,10 @@
     background: black;
 }
 .loader{
-    width: 100px;
-    height: 100px;
     position: absolute;
-    top: 45%;
-    left: 42%;
+    top: calc(50vh - 50px);
+    left: calc(50vw - 50px);
 }
 .loaderHolder::ng-deep .mat-progress-spinner circle, .mat-spinner circle{
-    stroke: white!important;
+    stroke: white;
 }
